--- a/recipes-core/ecj/files/ecj-initial.in
+++ b/recipes-core/ecj/files/ecj-initial.in
@@ -1,1 +1,1 @@
-${RUNTIME} -Xmx512m -cp ${ECJ_JAR} org.eclipse.jdt.internal.compiler.batch.Main ${1+"$@"}
+${RUNTIME} -Xmx512m -Djdt.compiler.useSingleThread=true -cp ${ECJ_JAR} org.eclipse.jdt.internal.compiler.batch.Main ${1+"$@"}
